force-app/main/default/objects/Site_Survey__c/fields/Building_Access_Point__c.field-meta.xml
<CustomField>
    <fullName>Building_Access_Point__c</fullName>
    <inlineHelpText>Enter the access point to the building</inlineHelpText>
    <label>Building Access Point</label>
    <type>TextArea</type>
</CustomField>