force-app/main/default/objects/Site_Survey__c/fields/Designated_Parking_Location__c.field-meta.xml
<CustomField>
    <fullName>Designated_Parking_Location__c</fullName>
    <description>Used to store designated parking location</description>
    <inlineHelpText>Enter the designated parking location</inlineHelpText>
    <label>Designated Parking Location</label>
    <type>TextArea</type>
</CustomField>