force-app/main/default/objects/Site_Survey__c/fields/Duration_Adjustment_Time__c.field-meta.xml
<CustomField>
    <fullName>Duration_Adjustment_Time__c</fullName>
    <formula>IF(Security_Sign_in_out__c,7,0) + 
IF(Key_Card_Required__c,4,0) +
IF(Escort_Required__c,5,0) + 
IF(Meet_with_Contact_Prior_to_Work__c,10,0) +
IF(Remove_Equipment_from_Vehicle__c,5,0) + 
IF(Signature_Required__c,5,0) +
IF(Reload_Van__c,5,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration Adjustment Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>