force-app/main/default/objects/Site_Survey__c/fields/Female_Skillset_Required__c.field-meta.xml
<CustomField>
    <fullName>Female_Skillset_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hygiene Female Skillset Required</label>
    <type>Checkbox</type>
</CustomField>