force-app/main/default/objects/Site_Survey__c/fields/Health_Safety_Orientation_Required__c.field-meta.xml
<CustomField>
    <fullName>Health_Safety_Orientation_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Health &amp; Safety Orientation Required</label>
    <type>Checkbox</type>
</CustomField>