force-app/main/default/objects/Site_Survey__c/fields/Key_Card_Required__c.field-meta.xml
<CustomField>
    <fullName>Key_Card_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>4 mins</inlineHelpText>
    <label>Key/Card Required</label>
    <type>Checkbox</type>
</CustomField>