force-app/main/default/objects/Site_Survey__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>To store the address of the customer</description>
    <inlineHelpText>Enter the location (Address) of the customer</inlineHelpText>
    <label>Location</label>
    <type>TextArea</type>
</CustomField>