force-app/main/default/objects/Site_Survey__c/fields/Meet_with_Contact_Prior_to_Work__c.field-meta.xml
<CustomField>
    <fullName>Meet_with_Contact_Prior_to_Work__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>10 mins</inlineHelpText>
    <label>Meet with Contact Prior to Work</label>
    <type>Checkbox</type>
</CustomField>