force-app/main/default/objects/Site_Survey__c/fields/Min_Chemical_Work_Order_Lines__c.field-meta.xml
<CustomField>
    <fullName>Min_Chemical_Work_Order_Lines__c</fullName>
    <label>Min Chemical Work Order Lines</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>