force-app/main/default/objects/Site_Survey__c/fields/Number_of_Rooms__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Rooms__c</fullName>
    <label>Number of Rooms</label>
    <summaryForeignKey>Survey_Location__c.Site_Survey__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>