force-app/main/default/objects/Site_Survey__c/fields/Pest_Duration_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Pest_Duration_Calculation__c</fullName>
    <inlineHelpText>In Minutes</inlineHelpText>
    <label>Pest Duration Calculation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>