force-app/main/default/objects/Site_Survey__c/fields/Pest_WorkOrder_Calculation_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Pest_WorkOrder_Calculation_Adjustment__c</fullName>
    <label>Pest WorkOrder Calculation Adjustment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>