force-app/main/default/objects/Site_Survey__c/fields/Reload_Van__c.field-meta.xml
<CustomField>
    <fullName>Reload_Van__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>5 mins</inlineHelpText>
    <label>Reload Van</label>
    <type>Checkbox</type>
</CustomField>