force-app/main/default/objects/Site_Survey__c/fields/Remove_Equipment_from_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Remove_Equipment_from_Vehicle__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>5 mins</inlineHelpText>
    <label>Remove Equipment from Vehicle</label>
    <type>Checkbox</type>
</CustomField>