force-app/main/default/objects/Site_Survey__c/fields/Security_Sign_in_out__c.field-meta.xml
<CustomField>
    <fullName>Security_Sign_in_out__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>7 mins</inlineHelpText>
    <label>Security Sign-in/out</label>
    <type>Checkbox</type>
</CustomField>