force-app/main/default/objects/Site_Survey__c/fields/Signature_Required__c.field-meta.xml
<CustomField>
    <fullName>Signature_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>5 mins</inlineHelpText>
    <label>Signature Required</label>
    <type>Checkbox</type>
</CustomField>