force-app/main/default/objects/Site_Survey__c/fields/Signature_Required_For__c.field-meta.xml
<CustomField>
    <fullName>Signature_Required_For__c</fullName>
    <inlineHelpText>The system always checks Pest Control SAs for signatures, even if Pest line of business is not selected here.  Additionally, system always checks if signature was captured for: 

-Deliveries

-VMI Account SAs

-SAs with Products Consumed</inlineHelpText>
    <label>Signature Required For</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hygiene</fullName>
            </value>
            <value>
                <fullName>Chemical</fullName>
            </value>
            <value>
                <fullName>Pest Control</fullName>
            </value>
            <value>
                <fullName>Life Safety</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>