force-app/main/default/objects/Site_Survey__c/fields/Special_Internal_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Special_Internal_Instructions__c</fullName>
    <inlineHelpText>Enter specific instructions to be followed, if any</inlineHelpText>
    <label>Special Internal Instructions</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>