force-app/main/default/objects/Site_Survey__c/fields/Work_Order_Calculation_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Calculation_Adjustment__c</fullName>
    <inlineHelpText>Enter value in minutes, any possible adjustments in work order duration pertinent to the customer site.</inlineHelpText>
    <label>Hygiene WorkOrder Calculation Adjustment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>